--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-<!-- Placeholder file to indicate HTML usage -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML Demo</title>
-</head>
+<!-- HTML placeholder -->
+<h1>HTML Demo</h1>
